--- a/publications/2025/202504.bib
+++ b/publications/2025/202504.bib
@@ -2,9 +2,10 @@
   author={Zhou, Peng and Yu, Haoran and Yan, Yuanting and Wu, Xindong},
   journal={IEEE Transactions on Emerging Topics in Computational Intelligence}, 
   title={Density-Based Online Concept Evolution Detection in Streaming Features}, 
-  year={2025},
-  volume={},
-  number={},
-  pages={1-16},
+  year={2026},
+  volume={10},
+  number={1},
+  pages={705-720},
   keywords={Feature extraction;Clustering algorithms;Prediction algorithms;Heuristic algorithms;Data mining;Bipartite graph;Signal processing algorithms;Diseases;Sensors;Real-time systems;Streaming features;concept evolution detecting;density peaks clustering},
   doi={10.1109/TETCI.2025.3597301}}
+
